--- a/static/index.html
+++ b/static/index.html
@@ -15,12 +15,13 @@
 </head>
 
 <body>
+	<div class = "project">
 	<div>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>John Daniel Domine</h1>
+			<p>Cognitive Science: Human-Computer Interaction major.</p>
 		</div>
 
 
