--- a/static/index.html
+++ b/static/index.html
@@ -15,13 +15,14 @@
 </head>
 
 <body>
-	<div class = "project">
 	<div>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
+			<div class = "project">
 			<h1>John Daniel Domine</h1>
-			<p>Cognitive Science: Human-Computer Interaction major.</p>
+			<p>Undergraduate at UCSD majoring in Cognitive Science: Human-Computer Interaction.</p>
+			</div>
 		</div>
 
 
@@ -32,7 +33,7 @@
 		<div id="project1">
 			<a href="project.html">
 				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+				<p>Mestasis</p>
 			</a>
 		</div>
 		<div id="project2">
@@ -74,7 +75,7 @@
 		<div id="project8">
 			<a href="project.html">
 				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
-				<p>Design tools</p>
+				<p>Design tools</p> 
 			</a>
 		</div>
 	</div>
